# MyChessGame

./: CMakeLists.txt  ChessView.cpp  ChessView.h  ChessView.ui  MyChessGame.pro  README.md  main.cpp  resources.qrc
Client/: Ayyoo.cpp  Ayyoo.h  ChessAPIService.cpp  ChessAPIService.h  ChessField.h  ChessMainWindow.cpp  ChessMainWindow.h  ChessMainWindow.ui  ChessModel.cpp  ChessModel.h  ChessTableWidget.cpp  ChessTableWidget.h  ChessView.cpp  ChessView.h  ChessViewModel.cpp  ChessViewModel.h  HomePageWidget.cpp  HomePageWidget.h  HomePageWidget.ui  HoverEventFilter.h  IChessModel.h  LocalChessWidget.cpp  LocalChessWidget.h  LocalChessWidget.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  OnlineChessWidget.cpp  OnlineChessWidget.h  OnlineChessWidget.ui  SwitchPawnDialog.cpp  SwitchPawnDialog.h  SwitchPawnDialog.ui  UserSession.h  main.cpp
Client/backend/: ChessAPIService.cpp  ChessAPIService.h  ChessModel.cpp  ChessModel.h  IChessModel.h
Client/common/: ChessAPIService.cpp  ChessAPIService.h  ChessField.h
Client/frontend/: ChessMainWindow.cpp  ChessMainWindow.h  ChessMainWindow.ui  ChessTableWidget.cpp  ChessTableWidget.h  ChessTableWidget.ui  HomePageWidget.ui  LocalChessWidget.cpp  LocalChessWidget.h  LocalChessWidget.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  OnlineChessWidget.cpp  OnlineChessWidget.h  OnlineChessWidget.ui  SwitchPawnDialog.cpp  SwitchPawnDialog.h
Client/frontend/utilities/: HoverEventFilter.cpp
Common/: ChessModel.cpp  ChessModel.h
MyChessGame/Model/: ChessField.h  ChessModel.cpp  ChessModel.h
MyChessGame/View/: ChessView.cpp  ChessView.h  ChessView.ui  SwitchPawnDialog.cpp  SwitchPawnDialog.h
Resources/: resources.qrc
Server/: ChessModel.cpp  ChessModel.h  ChessServer.cpp  ChessServer.h  DatabaseHandler.cpp  DatabaseHandler.h  GameSession.h  UserSession.h  main.cpp
Test/: ChessModelTest.cpp  ChessModelTest.h
